--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>IJSE - Institude of Software Engineering</h1>
-<h2>#1 software Institute</h2>
+<h2>#1 software Institute Panadura</h2>
 <h2>Kaif-Zaki</h2>
 </body>
 </html>
